Some design improvements

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+<input type="hidden" data-text={@controller.url}>
 <div class="content">
     <div class="floating-chat">
         <i class="fa fa-comments" aria-hidden="true"></i>
