--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 //= chunk/head.html
-<input type="hidden" data-text={@controller.url}>
+<input type="hidden" id='msg' data-text='http://localhost:5000/api/values'>
 <div class="content">
     <div class="floating-chat">
         <i class="fa fa-comments" aria-hidden="true"></i>
