Update server url for requests

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 //= chunk/head.html
-<input type="hidden" id='msg' data-text='http://localhost:5000/api/values'>
+<input type="hidden" id='msg' data-text='http://1012bf1f.ngrok.io/api/values'>
 <div class="content">
     <div class="floating-chat">
         <i class="fa fa-comments" aria-hidden="true"></i>
