--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<input type="hidden" id='msg' data-text='http://1012bf1f.ngrok.io/api/values'>
+<input type="hidden" id='msg' data-text='https://1012bf1f.ngrok.io/api/values'>
 <div class="content">
     <div class="floating-chat">
         <i class="fa fa-comments" aria-hidden="true"></i>
